--- a/bnbridge/package.json
+++ b/bnbridge/package.json
@@ -42,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@walletconnect/browser": "^1.0.0-beta.29",
+    "@walletconnect/qrcode-modal": "^1.0.0-beta.29"
   }
 }
